--- a/index.html
+++ b/index.html
@@ -3,40 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Card</title>
+    <title>Online Shop</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Web Developer | Designer | Your Job Title</p>
+        <h1>Your Online Shop</h1>
+        <nav>
+            <a href="cart.html">Go to Cart</a>
+        </nav>
     </header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Short description about you or your business. This can be a few sentences about your skills, experience or vision.</p>
-    </section>
-
-    <section id="portfolio">
-        <h2>Portfolio</h2>
-        <div class="portfolio-item">
-            <h3>Project 1</h3>
-            <p>Description of your project. You can include a link to the live version or repository.</p>
+    <section id="products">
+        <h2>Products</h2>
+        <div class="product" data-id="1">
+            <h3>Product 1</h3>
+            <p>Price: $10</p>
+            <button class="add-to-cart">Add to Cart</button>
         </div>
-        <div class="portfolio-item">
-            <h3>Project 2</h3>
-            <p>Description of another project.</p>
+        <div class="product" data-id="2">
+            <h3>Product 2</h3>
+            <p>Price: $15</p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="product" data-id="3">
+            <h3>Product 3</h3>
+            <p>Price: $20</p>
+            <button class="add-to-cart">Add to Cart</button>
         </div>
     </section>
 
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-        <p>Phone: +1234567890</p>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
